# go/model_run.go
@@ -1,0 +1,42 @@
+/*
+ * Estrava
+ *
+ * Cool Estrava tings
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+type Run struct {
+
+	Id string `json:"id,omitempty"`
+
+	Title string `json:"title,omitempty"`
+
+	Username string `json:"username,omitempty"`
+
+	Distance float32 `json:"distance,omitempty"`
+
+	Time string `json:"time,omitempty"`
+
+	Date string `json:"date,omitempty"`
+}
+
+// AssertRunRequired checks if the required fields are not zero-ed
+func AssertRunRequired(obj Run) error {
+	return nil
+}
+
+// AssertRecurseRunRequired recursively checks if required fields are not zero-ed in a nested slice.
+// Accepts only nested slice of Run (e.g. [][]Run), otherwise ErrTypeAssertionError is thrown.
+func AssertRecurseRunRequired(objSlice interface{}) error {
+	return AssertRecurseInterfaceRequired(objSlice, func(obj interface{}) error {
+		aRun, ok := obj.(Run)
+		if !ok {
+			return ErrTypeAssertionError
+		}
+		return AssertRunRequired(aRun)
+	})
+}
