# go/model_users.go
@@ -1,0 +1,36 @@
+/*
+ * Estrava
+ *
+ * Cool Estrava tings
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+type Users struct {
+
+	Name string `json:"name,omitempty"`
+
+	Username string `json:"username,omitempty"`
+
+	Password string `json:"password,omitempty"`
+}
+
+// AssertUsersRequired checks if the required fields are not zero-ed
+func AssertUsersRequired(obj Users) error {
+	return nil
+}
+
+// AssertRecurseUsersRequired recursively checks if required fields are not zero-ed in a nested slice.
+// Accepts only nested slice of Users (e.g. [][]Users), otherwise ErrTypeAssertionError is thrown.
+func AssertRecurseUsersRequired(objSlice interface{}) error {
+	return AssertRecurseInterfaceRequired(objSlice, func(obj interface{}) error {
+		aUsers, ok := obj.(Users)
+		if !ok {
+			return ErrTypeAssertionError
+		}
+		return AssertUsersRequired(aUsers)
+	})
+}
